Now players go back to their inventories after opening a shulkerbox by right-clicking it in the inventory.